# coreason-connect

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  product_requirements.md  requirements.md  usage.md
src/coreason_connect/: __init__.py  app.py  config.py  interfaces.py  loader.py  main.py  secrets.py  server.py  types.py
src/coreason_connect/plugins/: gitops.py  ms365.py
src/coreason_connect/utils/: logger.py
tests/: test_app.py  test_complex_workflows.py  test_config.py  test_config_path_safety.py  test_consequentiality_overwrite.py  test_identity_edge_cases.py  test_interfaces.py  test_loader.py  test_main.py  test_plugin_confex.py  test_plugin_gitops.py  test_plugin_ms365.py  test_rightfind_plugin.py  test_secrets.py  test_server.py  test_server_duplicates.py  test_server_edge_cases.py  test_service_facade.py  test_spend_gate.py  test_types.py  test_utils.py  test_valid_adapter_scenarios.py
tests/fixtures/: connectors.yaml  mock_consequential_plugin.py  mock_plugin.py
tests/fixtures/local_libs/adapters/: confex_adapter.py  duplicate_class.py  init_fail.py  invalid_adapter.py  rf_adapter.py  valid_adapter.py
tests/fixtures/local_libs/confex_client/: __init__.py  client.py
tests/fixtures/local_libs/crash_plugins/: crash_on_load.py  dummy.py
tests/fixtures/local_libs/rightfind_client/: __init__.py  rfe.py  rights_advisory.py
